--- a/quemSomos.html
+++ b/quemSomos.html
@@ -148,7 +148,7 @@
                     
                </div>
                <div class="containerdiv">
-                    <img src="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/equipe1.jpg" alt="Malu Ávila Sobrinho de Vasconcelos">
+                    <img src="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/equipe1.png" alt="Malu Ávila Sobrinho de Vasconcelos">
                     <div>
                         <h3>Malu Ávila Sobrinho de Vasconcelos</h3>
                         <p>Graduada em Farmácia pela Faculdade Maurício de Nassau em 2016 e pós-graduada em Farmácia Clínica e
