--- a/quemSomos.html
+++ b/quemSomos.html
@@ -116,18 +116,15 @@
             border-radius: 40px;
         }
 
-        .containerdiv {
-            display: flex;
-            align-items: center;
-        }
-        .containerdiv img {
+       
+        .container img {
             margin-right: 20px;
             border-radius: 50%;
             width: 150px;
             height: 150px;
             object-fit: cover;
         }
-        .containerdiv h3, .containerdiv p {
+        .container h3, .container p {
             margin: 15px;
         }
     </style>
@@ -147,7 +144,7 @@
                         Nosso objetivo é proporcionar experiências confortáveis aos nossos clientes, promovendo autoestima, saúde e bem-estar.</p>
                     
                </div>
-               <div class="containerdiv">
+               <div class="container">
                     <img src="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/equipe1.png" alt="Malu Ávila Sobrinho de Vasconcelos">
                     <div>
                         <h3>Malu Ávila Sobrinho de Vasconcelos</h3>
