--- a/quemSomos.html
+++ b/quemSomos.html
@@ -13,7 +13,7 @@
             margin: 0;
             padding: 0;
             position: relative;
-			background-color: #FFF0F5;
+	    background-color: #e8d9dd;
         }
 
         .conteudo {
