--- a/servicos.html
+++ b/servicos.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     
-    <title>Clinica Revitar - Quem Somos</title>
+    <title>Clinica Revitar - Serviços</title>
 	
     <style>
         body {
