--- a/quemSomos.html
+++ b/quemSomos.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Bentham&display=swap" rel="stylesheet">
     <title>Clinica Revitar - Quem Somos</title>
 
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Bentham', serif;
+            font-size: 20px;
             margin: 0;
             padding: 0;
             position: relative;
@@ -185,7 +186,9 @@
         <div class="conteudo">
             <div class="container mt-5 ">
                 <div class="row align-items-center texto">
+                    <div class="col-lg-12">
                     <h1 style="text-align:center"><strong>Quem Somos</strong></h1>
+                </div>
                     <p>A Clínica Revitar nasceu de um sonho compartilhado entre duas amigas em 2012, no início de suas
                         formações acadêmicas.
                         Na trajetória profissional ao longo dos anos o objetivo de abertura da clínica ficou distante
@@ -193,7 +196,7 @@
                         Em 2024 após concluir cursos e pós graduações na estética e cosmetologia a Clínica Revitar nasce
                         com o propósito
                         de levar conforto, segurança, saúde e beleza para suas clientes. </p>
-                    <br />
+                
                     <p>
                         Estamos levando em nossos procedimentos as técnicas inovadoras e nanotecnologias aplicadas na
                         cosmetologia para uma
@@ -203,9 +206,11 @@
                 </div>
                 <div class="divCell"></div>
                 <div class="row align-items-center texto">
+                    <div class="col-lg-12">
                     <h2 style="text-align:center"><strong>Perfil Profissional</strong></h2><br>
                     <h2 style="text-align:center"><strong>Malu Ávila Sobrinho de Vasconcelos (Farmacêutica)</strong>
                     </h2>
+                </div>
                     <div class="col-lg-6 imagem">
                         <img src="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/equipe1.png"
                             alt="Malu Ávila Sobrinho de Vasconcelos" class="profile-img">
@@ -229,9 +234,10 @@
                     </div>
                 </div>
                 <div class="row align-items-center texto">
+                    <div class="col-lg-12">
+                    <h2 ><strong>Gessica Santos Albuquerque (Enfermeira)</strong></h2>
+                    </div>
                     
-                    <h2 style="text-align:center;padding-right: 40px;padding-left: 40px;"><strong>Gessica Santos Albuquerque (Enfermeira)</strong></h2>
-                <br>
                     <div class="col-lg-6 imagem">
                         <img src="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/equipe2.png"
                             alt="Gessica Santos Albuquerque (Enfermeira)" class="profile-img">
