--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Capistrano Dedetizadora</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bentham&display=swap" rel="stylesheet">
+    <title>Clinica Revitar</title>
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Bentham', serif;
+            font-size: 25px;
             margin: 0;
             padding: 0;
             position: relative;
+            background-color: #e8d9dd;
         }
 
         .conteudo {
@@ -18,23 +24,23 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-image: url('https://raw.githubusercontent.com/felipesoart/CapistranoDedetizadora/main/certificado.png');
-            background-size: cover;
+            background-image: url('https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/certificado1.png');
+            background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         .container {
-            text-align: center;
+
             margin-top: 20px;
-            /* Adicionado para espaçamento */
+            /* Adicionado para espaçamento Bentham regular*/
         }
 
         .button {
             display: block;
-            width: 450px;
+            width: 870px;
             padding: 10px 20px;
-            background-color: #01725e;
+            background-color: #d8a4b1;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
@@ -55,19 +61,71 @@
         }
 
         /* Ajustes para telas maiores */
-        @media screen and (min-height: 900px) {
-            .button {
-                width: 700px;
-                height: 100px;
-                border-radius: 20px;
-                font-size: 70px;
+        @media screen and (min-width: 412px) {
+
+            .texto {
+                font-size: 200%;
+                margin: 10px !important;
             }
 
-            .video {
-                width: 700px;
-                height: 400px;
-                border-radius: 20px;
-                font-size: 70px;
+            .texto p {
+                text-align: justify;
+            }
+
+            .imagem {
+                flex: 1;
+                margin: 40px;
+                width: 80% !important;
+                /* Defina aqui a largura desejada para a imagem */
+                height: auto;
+                border-radius: 50px !important;
+            }
+
+            .container,
+            .container-md,
+            .container-sm {
+                max-width: 890px;
+            }
+
+
+            .divCell {
+
+                padding: 20px;
+            }
+
+        }
+
+        /* Ajustes para telas maiores */
+        @media screen and (min-width: 360px) {
+
+            .texto {
+                font-size: 150%;
+                margin: 10px !important;
+            }
+
+            .texto p {
+                text-align: justify;
+            }
+
+            .imagem {
+                flex: 1;
+                margin: 40px;
+                width: 80% !important;
+                /* Defina aqui a largura desejada para a imagem */
+                height: auto;
+                border-radius: 50px !important;
+            }
+
+            .container,
+            .container-md,
+            .container-sm {
+                max-width: 890px;
+            }
+
+
+            .divCell {
+
+                padding: 15px;
             }
 
         }
@@ -86,32 +144,67 @@
             right: 0;
             pointer-events: none;
         }
+
+        .container2 {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            padding: 20px;
+        }
+
+        .texto {
+            flex: 1;
+            margin: 10px;
+            font-size: 100%;
+        }
+
+        .imagem {
+            flex: 1;
+            padding: 5px;
+            width: 40%;
+            /* Defina aqui a largura desejada para a imagem */
+            height: auto;
+            border-radius: 40px;
+        }
+
+        .profile-img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 50%;
+        }
     </style>
 </head>
 
 <body>
     <form>
 
-        <img src="https://raw.githubusercontent.com/felipesoart/CapistranoDedetizadora/main/top1.png" alt="Imagem"
-            class="img1" />
+        <!-- <img src="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/top1.png" alt="Imagem"
+            class="img1" /> -->
         <div class="conteudo">
-            <div class="container">
-                <a href="https://felipesoart.github.io/CapistranoDedetizadora/quemSomos.html" class="button" target="_blank">Quem Somos</a>
-                <a href="https://felipesoart.github.io/CapistranoDedetizadora/servicos.html" class="button" target="_blank">Serviços</a>
-                <a href="https://api.whatsapp.com/send?phone=5588997123944&text=Gostaria%20de%20saber%20mais%20sobre%20os%20servi%C3%A7os%20de%20dedetiza%C3%A7%C3%A3o"
-                    class="button" target="_blank">WhatsApp</a>               
-                    <video src="https://raw.githubusercontent.com/felipesoart/CapistranoDedetizadora/main/video.mp4"
-                    autoplay controls class="video"></video>
+            <div class="container mt-5 ">
+
+                <div class="row align-items-center">
+                    <a href="https://felipesoart.github.io/ClinicaRevitar/quemSomos.html" class="button"
+                        target="_blank">Quem Somos</a>
+                    <a href="https://felipesoart.github.io/ClinicaRevitar/servicos.html" class="button"
+                        target="_blank">Serviços</a>
+                    <a href="https://api.whatsapp.com/send?phone=558899205538&text=Gostaria%20de%20saber%20mais%20sobre%20os%20servi%C3%A7os"
+                        class="button" target="_blank">WhatsApp</a>
+                    <!-- <video src="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/video.mp4"
+                    autoplay controls class="video"></video> -->
+                </div>
             </div>
-        </div>        
-        
-        <img src="https://raw.githubusercontent.com/felipesoart/CapistranoDedetizadora/main/bm1.png" alt="Imagem"
-            class="img2" />
+        </div>
+        <!-- <img src="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/bm1.png" alt="Imagem"
+            class="img2" /> -->
     </form>
 
     <script>
-        
+
     </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
 
