--- a/index.html
+++ b/index.html
@@ -172,6 +172,29 @@
             height: auto;
             border-radius: 50%;
         }
+
+        a {
+            color: #ffffff;
+            text-decoration: none;
+            background-color: transparent;
+        }
+
+        a:hover {
+            color: #ffffff;
+            text-decoration: none;
+        }
+
+        .button:hover {
+            display: block;
+            width: 870px;
+            padding: 10px 20px;
+            background-color: #c07e8e;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-bottom: 10px;
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -190,6 +213,10 @@
                         target="_blank">Serviços</a>
                     <a href="https://api.whatsapp.com/send?phone=558899205538&text=Gostaria%20de%20saber%20mais%20sobre%20os%20servi%C3%A7os"
                         class="button" target="_blank">WhatsApp</a>
+                    <a href="https://www.google.com/maps/place/2%C2%B053'42.5%22S+40%C2%B026'41.3%22W/@-2.895128,-40.4454471,214m/data=!3m2!1e3!4b1!4m13!1m8!3m7!1s0x7e98660f56abc49:0xca971859ed748a48!2sJijoca+de+Jericoacoara+-+CE!3b1!8m2!3d-2.8993062!4d-40.4509652!16s%2Fm%2F05h5nlj!3m3!8m2!3d-2.895128!4d-40.444802?entry=ttu"
+                        target="_blank" class="button">
+                        Google Maps
+                    </a>
                     <!-- <video src="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/video.mp4"
                     autoplay controls class="video"></video> -->
                 </div>
@@ -197,6 +224,38 @@
         </div>
         <!-- <img src="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/bm1.png" alt="Imagem"
             class="img2" /> -->
+
+        <div id="cb-row--footer-mobile-main" data-row-id="main" data-show-on="mobile"
+            style="background-color: #d8a4b1; color: #fff;">
+            <div>
+                <div class="container">
+                    <div data-section="hfg_footer_layout_main">
+                        <div class="row align-items-center ">
+
+                            <div class="col-lg-6 imagem">
+                                <h1><strong>Clínica Revitar</strong>
+                                    <p class="subP" style="font-size: 25px;">Saúde e Estética.</p>
+                                </h1>
+                            </div>
+
+                            <div class="col-lg-6">
+
+                                <h2>Contato</h2>
+                                <a href="mailto:administrador@clinicarevitar.com" target="_blank">
+                                    administrador@clinicarevitar.com
+                                </a><br /><span>Cell: <a
+                                        href="https://api.whatsapp.com/send?phone=558899205538&text=Gostaria%20de%20saber%20mais%20sobre%20os%20servi%C3%A7os"
+                                        target="_blank" style="font-family: Arial, Helvetica, sans-serif;">(88)
+                                        9.9920-5538</a></span>
+                            </div>
+                        </div>
+
+                        <div class="hfg-slot c-left"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </form>
 
     <script>
