--- a/quemSomos.html
+++ b/quemSomos.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bentham&display=swap" rel="stylesheet">
     <title>Clinica Revitar - Quem Somos</title>
-
+<meta property="og:title" content="Clinica Revitar">    
+    <meta property="og:image" content="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/clinicarevitarlogo.png">
+    <meta property="og:url" content="https://felipesoart.github.io/ClinicaRevitar/">
+    <meta property="og:type" content="website">
+    <link rel="icon" href="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/clinicarevitarlogo.png" type="image/png">
     <style>
         body {
             font-family: 'Bentham', serif;
