--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bentham&display=swap" rel="stylesheet">
     <title>Clinica Revitar</title>
-<meta property="og:title" content="Clinica Revitar">    
+    <meta property="og:title" content="Clinica Revitar">    
     <meta property="og:image" content="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/clinicarevitarlogo.png">
     <meta property="og:url" content="https://felipesoart.github.io/ClinicaRevitar/">
     <meta property="og:type" content="website">
@@ -22,16 +22,22 @@
             background-color: #e8d9dd;
         }
 
+        .imagemlogo{
+            background-image: url('https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/certificado.png');
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    height: 395px;
+                    margin-top: 20px;
+        }
+
         .conteudo {
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
-            background-image: url('https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/certificado1.png');
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
+            height: 45vh;
+          
         }
 
         .container {
@@ -207,6 +213,8 @@
 
         <!-- <img src="https://raw.githubusercontent.com/felipesoart/ClinicaRevitar/main/top1.png" alt="Imagem"
             class="img1" /> -->
+        <div class="imagemlogo"></div>
+
         <div class="conteudo">
             <div class="container mt-5 ">
 
